improved my solution of test